kubernetes/apps/paperless/paperless/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - paperless2.blackcats.cc
  rules:
    - backendRefs:
        - name: paperless-app
          port: 8000
